fix for uncleared orbit overflow on mobile for some reason

--- a/style.css
+++ b/style.css
@@ -46,15 +46,7 @@ h2 {
 .orbit {
 	width: 100%;
 	height: 200px;
-}
-
-@keyframes spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+	overflow: hidden;
 }
 
 .path-container {
@@ -74,7 +66,6 @@ h2 {
 	top: -100%;
 	border-radius: 50%;
 	border: 2px solid white;
-	/*animation: spin 500s linear infinite;*/
 	z-index: 6;
 }
 
